docs: add bearerauth
